[package]
name = "rust-sandbox"
version = "0.1.0"
authors = ["emergent <yosikawa@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "*"
num = "*"
log = "*"
syslog = "*"
time = "*"
chrono = "*"
tokio = "0.2.0-alpha.6"
tokio-timer = "0.3.0-alpha.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
