[package]
name = "rust-sandbox"
version = "0.1.0"
authors = ["emergent <yosikawa@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.8.2"
num = "0.4.0"
log = "0.4.17"
syslog = "6.0.1"
time = "0.3.14"
chrono = "0.4.22"
tokio = { version = "1.20.1", features = ["full"] }
tokio-timer = "0.3.0-alpha.6"
base64 = "0.13.0"
hound = "3.4.0"
byteorder = "1.4.3"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "bench"
harness = false
